Fixed homepage on firefox by removing float
changed read more links in excerpt via functions.php

--- a/css/courtneymclean.css
+++ b/css/courtneymclean.css
@@ -89,7 +89,7 @@
 		font-size: 1.6em; 
 		font-style: normal;
 		font-weight: 300;
-		line-height: 1.5em; 
+		line-height: 1.6em; 
 		margin-bottom: 10px; 
 		}
 	h3 { 
@@ -105,7 +105,7 @@
 		font-weight: 500;
 		line-height: 1.1em; /* 12px / 16px */ 
 		text-transform: uppercase;
-		margin: 30px 0 15px;
+		margin: 50px 0 15px;
 		}
 	h5 { 
 		font-size: 0.9em; /* 12px / 16px */ 
@@ -129,10 +129,10 @@
 
 /* #Paragraph classes =============== */
 	p { 
-		font-size: 1.1em; /* 13px / 16px */ 
+		font-size: 1.2em; /* 13px / 16px */ 
 		font-style: normal;
 		font-weight: 300;
-		letter-spacing: 0.05em;
+		letter-spacing: 0.02em;
 		line-height: 1.8em;
 		margin: 0 0 20px 0; 
 		}
@@ -358,7 +358,6 @@
 /* #SECTION: Introduction & Latest Post =============== */
 
 	#home_intro, #introduction {
-		float: left;
 		margin: 0;
 		height: 400px;
 		padding:0px;
@@ -373,6 +372,7 @@
 		}
 	#intro-wrapper {
 		background: rgba(0,0,0,0.5);
+		min-height: 300px;
 		padding: 90px 0px 110px;
 		position: fixed;
 		width: 100%;
@@ -381,9 +381,10 @@
 	.intro-text {
 		border-top: 1px solid #c9c9c9;
 		margin: 0 auto;
-		margin-top: 70px;
+		margin-top: 50px;
 		padding-top: 20px;
 		width: 49.16%;
+		max-width: 630px;
 		}
 
 	.intro-text p{
